check on render. I hope this works?
