# swagger.json
@@ -19,9 +19,7 @@
             "description": "OK"
           }
         }
-      }
-    },
-    "/test": {
+      },
       "post": {
         "description": "",
         "parameters": [
@@ -54,6 +52,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -77,6 +78,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -273,8 +277,8 @@
       "get": {
         "description": "",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
           }
         }
       }
